Use eureka server to manage microservices

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>redirect-service</module>
         <module>analytics-service</module>
         <module>api-gateway</module>
+        <module>discovery-service</module>
     </modules>
 
     <properties>
