--- a/url-service/src/main/resources/application.yml
+++ b/url-service/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: url-service
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
   
   datasource:
     url: jdbc:mysql://localhost:3306/url_shortener?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
