--- a/analytics-service/src/main/resources/application.yml
+++ b/analytics-service/src/main/resources/application.yml
@@ -4,20 +4,11 @@ server:
 spring:
   application:
     name: analytics-service
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
-  
   datasource:
     url: jdbc:mysql://localhost:3306/url_shortener?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: Sarthak@2305
     driver-class-name: com.mysql.cj.jdbc.Driver
-  
   jpa:
     hibernate:
       ddl-auto: update
@@ -26,8 +17,6 @@ eureka:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
-  
-  # Kafka configuration
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
@@ -38,6 +27,16 @@ eureka:
       properties:
         spring.json.trusted.packages: com.sarthak.common.event
         spring.json.value.default.type: com.sarthak.common.event.UrlClickEvent
+
+eureka:
+  client:
+    registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
 
 # Actuator
 management:
