--- a/redirect-service/src/main/resources/application.yml
+++ b/redirect-service/src/main/resources/application.yml
@@ -4,22 +4,11 @@ server:
 spring:
   application:
     name: redirect-service
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
-  
-  # Redis configuration
   data:
     redis:
       host: localhost
       port: 6379
       timeout: 2000ms
-  
-  # Kafka configuration
   kafka:
     bootstrap-servers: localhost:9092
     producer:
@@ -29,6 +18,16 @@ eureka:
       retries: 3
       properties:
         spring.json.add.type.headers: false
+
+eureka:
+  client:
+    registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
 
 # Application settings
 app:
